testsuite/tests/rename/should_fail/T7164.stderr
T7164.hs:5:5: error: [GHC-29916] Multiple declarations of ‘derp’
  |
5 |     derp :: m a
  |     ^^^^^^^^^^^
  |
8 | derp = 123
  | ^^^^

